[tool.poetry]
name = "test-deepl"
version = "0.1.0"
description = ""
authors = ["Vitalii Igantkin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
aiogram = "^3.1.1"
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
